manifests/2-service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-apache-service
spec:
  selector:
    app: my-apache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
