manifests/3-ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-apache-ingress
  annotations:
    apache.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-apache.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-apache-service
            port:
              number: 80
